--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.11.1
 bs4==0.0.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
+cloudscraper==1.2.60
 colorama==0.4.5
 cssselect==1.1.0
 fake-useragent==0.1.11
@@ -11,10 +12,12 @@ importlib-metadata==4.12.0
 lxml==4.9.1
 parse==1.19.0
 pyee==8.2.2
+pyparsing==3.0.9
 pyppeteer==1.0.2
 pyquery==1.4.3
 requests==2.28.1
 requests-html==0.10.0
+requests-toolbelt==0.9.1
 soupsieve==2.3.2.post1
 tqdm==4.64.0
 urllib3==1.26.11
